--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </footer>
 
 <script src="js/jquery/jquery-3.5.0.js"></script>
-<<!--script crossorigin="anonymous"
+<!--<script crossorigin="anonymous"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>-->
 <script crossorigin="anonymous"
